session swagger
